# RAG-DV

./: .gitignore  README.md  compose.yml  main.py  pyproject.toml
documents/: doc1.txt  doc2.txt  doc3.txt  rag_test.txt
src/backend/: document_operations.py  llm_node.py  llm_operations.py  message.py
src/frontend/: app.py  chat_interface.py  document_management.py
