[project]
name = "rag-dv"
version = "0.1.0"
description = "RAG project for Data Visualization Course at AGH"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "haystack-ai>=2.0",
    "pypdf>=5.5.0",
    "qdrant-haystack>=9.1.2",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.1",
]
